--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -39,7 +39,7 @@
 					<a class="nav-link " href="#portfolio">Réalisations</a>
 				</li>
 				<li class="nav-item articles">
-					<a class="nav-link " href="/admin/articles">Articles</a>
+					<a class="nav-link " href="/articles">Articles</a>
 					<ul class="edit-articles">
 					<li>
 							<a href="/admin/articles">Index des articles</a>
