--- a/template/admin/article/_form.html.twig
+++ b/template/admin/article/_form.html.twig
@@ -1,4 +1,4 @@
-<form action="/admin/newArticle" method="post" class="new-article">
+<form {{article ? ("action=/admin/changeArticle/" ~article.id) :("action=/admin/newArticle" )}}  method="post" class="form-article">
 	<label for="title">Titre de l'article:</label>
 	<input type="text" name="title" value="{{ article.title|default('') }}" required>
 	<label for="chapo">Petit résumé:</label>
@@ -6,10 +6,12 @@
 	<label for="content">Ecrivez votre article ici:</label>
 	<input type="text" name="content" rows="4" value="{{ article.content|default('') }}" required>
 
-	<label for="userId">Auteur:</label>
-	<input type="text" name="name" value="{{ userName }}" readonly>
-
-
+		<label for="userId">Auteur:</label>
+	{% if article %}
+	<input type="text" name="name" value ="{{article.firstname}} {{article.lastname}}">
+	{% else %}
+	<input type="text" name="name" value ="{{userName}}">
+	{% endif %}
 	<input type="submit" name="submit" value="Valider">
 
 </form>
