--- a/template/article/index.html.twig
+++ b/template/article/index.html.twig
@@ -1,47 +1,20 @@
-{# {% extends 'base.html.twig' %}
-{# on prend les blocs de style de et de base.html.twig #}
-{# {% block style %}
-	{{ parent() }}
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
-{% endblock %}
+{# Dans votre fichier article/index.html.twig #}
+
+
+{% extends 'base.html.twig' %}
 {% block body %}
-	<table id="article_table" class="display">
-		<thead>
-			<tr>
-				<th>Titre</th>
-				<th>Date de Modification</th>
-				<th>Chapo</th>
+    <h1>Liste des Articles</h1>
 
-				<th>Action</th>
-
-			</tr>
-		</thead>
-		<tbody>
-
-			<tr>
-				<td>{{ article.title }}</td>
-				<td>{{ article.updateDate }}</td>
-				<td>{{ article.chapo }}</td>
-
-				<td>
-					<a href="/article?id={{ article.id }}" target="_blank">Lien vers l'article</a>
-					<a href="/admin/changeArticle/{{ article.id }}">
-						<i class="fas fa-pencil-alt"></i>
-					</a>
-
-					<a href='/admin/deleteArticle/{{ article.id }}' onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet article ?')">
-						<i class="fas fa-trash"></i>
-					</a>
-				</td>
-			</tr>
-
-		</tbody>
-	</table>
+    <ul>
+        {% for article in articles %}
+            <li>
+                <h2>{{ article.title }}</h2>
+                {% if article.updateDate %}
+                    <p>Date de Modification : {{ article.updateDate|date('d/m/Y') }}</p>
+                {% endif %}
+                <p>Chapô : {{ article.chapo }}</p>
+                <p><a href="/article/{{ article.id }}" target="_blank">Lire l'article</a></p>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
-{% block js %}
-	{{ parent() }}
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-	<script src="../js/datatable_init.js"></script>
-{% endblock %} 
- #}
