--- a/template/comment/_newComment.html.twig
+++ b/template/comment/_newComment.html.twig
@@ -1,24 +1,25 @@
-
-
 {% block body %}
-<div class="comment-block">
-    <h2>Ajouter un commentaire</h2>
-    <form action="traitement_commentaire.php" method="POST">
-        <div class="form-group">
-            <label for="nom">Nom :</label>
-            <input type="text" id="nom" name="nom" placeholder="Entrez votre nom ici">
-        </div>
-        <div class="form-group">
-            <label for="mail">E-mail :</label>
-            <input type="email" id="mail" name="mail" placeholder="Votre e-mail">
-        </div>
-        <div class="form-group">
-            <label for="commentaire">Commentaire :</label>
-            <textarea id="commentaire" name="commentaire" rows="4" cols="50" placeholder="Saisissez votre commentaire ici"></textarea>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Soumettre">
-        </div>
-    </form>
-</div>
+	<div class="comment-block">
+		<h2>Ajouter un commentaire</h2>
+		<form action="/article/{{ article.id }}" method="POST" class="new-comment">
+
+			<div class="form-group">
+				<label for="pseudo">Pseudo :</label>
+				<input type="text" id="pseudo" name="pseudo" class="pseudo" placeholder="Entrez votre pseudo ici" required>
+			</div>
+			<div class="form-group">
+				<label for="mail">E-mail :</label>
+				<input type="email" id="mail" name="mail" placeholder="Votre e-mail" required>
+			</div>
+			<div class="form-group">
+				<label for="content">Commentaire :</label>
+				<textarea type="content" id="content" name="content" rows="4" cols="50" placeholder="Saisissez votre commentaire ici"></textarea>
+			</div>
+			<input type="hidden" name="articleId" value="{{ article.id }}">
+			<div class="form-group">
+				<input type="submit" value="Soumettre" name="submit">
+			</div>
+
+		</form>
+	</div>
 {% endblock %}
