--- a/template/admin/article/index.html.twig
+++ b/template/admin/article/index.html.twig
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 {% block body %}
-<a href="/admin/newArticle">Nouvel article</a>
+<a href="/admin/newArticle" class="new-btn">Nouvel article</a>
 	<table id="article_table" class="display">
 		<thead>
 			<tr>
