--- a/template/admin/comment/comments_rejected.html.twig
+++ b/template/admin/comment/comments_rejected.html.twig
@@ -1,43 +1,51 @@
 {% extends 'base.html.twig' %}
 
 {% block style %}
-    {{ parent() }}
-   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
+	{{ parent() }}
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 
 {% block body %}
-    <h2>Commentaires non validés</h2>
-    
-    <table id="comments_rejected_table" class="display">
-        <thead>
-            <tr>
-                <th>Auteur</th>
-                <th>Date de Publication</th>
-                <th>Contenu</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for comment in rejectedComments %}
-                <tr>
-                    <td>{{ comment.name }}</td>
-                    <td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
-                    <td>{{ comment.content }}</td>
-                    <td>
-                        <!-- Ajoutez les boutons et les liens nécessaires pour gérer les commentaires non validés -->
-                        <td>
-						<a href="/admin/validateComment/{{ comment.id }}">
-							<i class="fas fa-check">Valider</i>
-						</a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+	<h2>Commentaires non validés</h2>
+
+	<table id="comments_rejected_table" class="display">
+		<thead>
+			<tr>
+				<th>Auteur</th>
+				<th>Date de Publication</th>
+				<th>Contenu</th>
+				<th>Mail</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for comment in rejectedComments %}
+				<tr>
+					<td>{{ comment.pseudo }}</td>
+					<td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
+					<td>{{ comment.content }}</td>
+					<td>{{ comment.mail }}</td>
+					<td>{{ comment.status }}</td>
+					<td>
+						<form action="/admin/check-comment" method="POST">
+                <input type="hidden" name="commentId" value="{{ comment.id }}">
+
+                <select name="action">
+                    <option value=""></option>
+                    <option value="validate">Valider</option>
+                    </select>
+
+                <button type="submit">Soumettre</button>
+            </form>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
 
 {% block js %}
-    {{ parent() }}
-    <!-- Ajoutez les scripts JS spécifiques à cette page si nécessaire -->
-    <script src="../js/comments_rejected.js"></script>
+	{{ parent() }}
+	<!-- Ajoutez les scripts JS spécifiques à cette page si nécessaire -->
+	<script src="../js/comments_rejected.js"></script>
 {% endblock %}
