--- a/template/admin/comment/index.html.twig
+++ b/template/admin/comment/index.html.twig
@@ -12,6 +12,7 @@
 				<th>Date</th>
 				<th>content</th>
 				<th>Pseudo</th>
+				<th>Mail</th>
 				<th>Action</th>
 
 			</tr>
@@ -22,8 +23,8 @@
 					<td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
 					<td>{{ comment.content }}</td>
 					<td>{{ comment.pseudo }}</td>
-					<td></td>
-
+					<td>{{ comment.mail }}</td>
+					<td>{{ comment.status }}</td>
 				</tr>
 								
 			{% endfor %}
