--- a/public/css/style.css
+++ b/public/css/style.css
@@ -484,7 +484,17 @@ button:hover {
     font-size: 24px;
     margin-top: 0;
 }
+.new-btn{
+    background-color: #0056b3;
+    width: 75px;
+    height: 60px;
+    border-radius: 50%;
+    color: white;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
 
+}
 .comments-list {
     list-style-type: none;
     padding: 0;
