--- a/template/admin/comment/comments_pending.html.twig
+++ b/template/admin/comment/comments_pending.html.twig
@@ -1,40 +1,48 @@
 {% extends 'base.html.twig' %}
 
 {% block style %}
-    {{ parent() }}
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
+	{{ parent() }}
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css"/>
 {% endblock %}
 
 {% block body %}
-    <h2>Commentaires en attente de validation</h2>
-    
-    <table id="comments_pending_table" class="display">
-        <thead>
-            <tr>
-                <th>Pseudo</th>
-                <th>Date de Publication</th>
-                <th>Contenu</th>
+	<h2>Commentaires en attente de validation</h2>
+
+	<table id="comments_pending_table" class="display">
+		<thead>
+			<tr>
+				<th>Pseudo</th>
+				<th>Date de Publication</th>
+				<th>Contenu</th>
+				<th>Email</th>
+                <th>Statut</th>
                 <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for comment in pendingComments %}
-                <tr>
-                    <td>{{ comment.pseudo }}</td>
-                   <td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
-                    <td>{{ comment.content }}</td>
-                    <td>
-						 <a href="/admin/validateComment/{{ comment.id }}"> 
-							<i class="fas fa-check">Valider</i>
-						</a>
-                        <a href='/admin/rejectedArticle/{{ comment.id }}'>
-							<i class="fas fa-times">Rejeter</i>
-						</a>
-                        </td> 
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+			</tr>
+		</thead>
+		<tbody>
+			{% for comment in pendingComments %}
+				<tr>
+					<td>{{ comment.pseudo }}</td>
+					<td>{{ comment.date.format('Y-m-d H:i:s') }}</td>
+					<td>{{ comment.content }}</td>
+                    <td>{{ comment.mail }}</td>
+                    <td>{{ comment.status }}</td>
+					<td>
+						 <form action="/admin/check-comment" method="POST">
+                <input type="hidden" name="commentId" value="{{ comment.id }}">
+
+                <select name="action">
+                    <option value=""></option>
+                    <option value="validate">Valider</option>
+                    <option value="reject">Rejeter</option>
+                </select>
+
+                <button type="submit">Soumettre</button>
+            </form>
+					</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
-
-
