--- a/template/comment/_newComment.html.twig
+++ b/template/comment/_newComment.html.twig
@@ -1,7 +1,7 @@
 {% block body %}
 	<div class="comment-block">
 		<h2>Ajouter un commentaire</h2>
-		<form action="/article/{{ article.id }}" method="POST" class="new-comment">
+		<form action="/article/{{ article.id }}/submitComment" method="POST" class="new-comment">
 
 			<div class="form-group">
 				<label for="pseudo">Pseudo :</label>
