boostrap for modal comments

--- a/template/admin/comment/comments_approved.html.twig
+++ b/template/admin/comment/comments_approved.html.twig
@@ -27,6 +27,7 @@
 					<td>{{ comment.mail }}</td>
 					<td>{{ comment.status }}</td>
 					<td>
+                    
 						<form action="/admin/check-comment" method="POST">
 							<input type="hidden" name="commentId" value="{{ comment.id }}">
 
@@ -36,10 +37,21 @@
 							</select>
 
 							<button type="submit">Soumettre</button>
+
 						</form>
+                        <td>
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal{{ comment.id }}">Détails du commentaire</button>
+					</td>
 					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
+    {% endblock %}
+    {% block js %}
+	{{ parent() }}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
+	<script src="../js/datatable_init.js"></script>
 {% endblock %}
+
