--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,81 +1,73 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #dedbdb;
+    font-family: Arial, sans-serif !important;
+    background-color: #dedbdb !important;
     margin: 0;
     padding: 0;
-    position: relative;
-}
-
-/* 
-header {
-    background-color: #dedbdb;
-    color: black;
-    text-align: center;
-} */
-
-/* Style de base pour la barre de navigation */
-.navbar {
-    background-color: rgb(166, 166, 242);
-    overflow: hidden;
+    font-weight: bold !important;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+.navbar {
+    width: 100%;
+    height: 250px;
+    display: flex !important;
+    background-image: url('../img/header.png');
+    background-size: cover; /* Assurez-vous que l'image couvre toute la barre */
+    background-repeat: no-repeat;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
+    justify-content: flex-end!important;
+    }
 
-/* Style pour la liste non ordonnée */
-.navbar a.nav-link#blog-name {
-    display: block;
-    color: grey;
-    text-align: left;
-    text-decoration: none;
-    font-weight: bold;
-}
 
 .blog-brand {
     display: flex;
     align-items: center;
-    justify-content: center;
+
+}
+
+.navbar.with-background a.nav-link:hover {
+    background-color: rgba(0,123,255,.25);
+    border-radius: 10px;
+    color: #ffffff; /* Changer la couleur du texte au survol, si nécessaire */
+     transition: background-color 0.5s ease, color 0.5s ease;  
 }
 
 .who {
     width: 50%;
 }
-
 .navbar ul.navbar-nav {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
+      display: flex;
     align-items: center;
+    flex-direction: row;
+   
 }
 
 /* Style pour les éléments de la liste */
 .navbar li.nav-item {
-    margin: 0;
+    margin: 15px;
     padding: 0;
+    width: auto;
 }
 
 /* Style pour les liens dans la barre de navigation */
 .navbar a.nav-link {
     display: block;
     color: white;
-    text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
-    /* Supprime les soulignements par défaut des liens */
     transition: background-color 0.3s;
-    /* Transition de couleur de fond */
-}
+    font-size: larger;
+   }
 
 /* Style pour les liens au survol */
 .navbar a.nav-link:hover {
-    background-color: #ba81ef;
+    background-color: #79787a;
     left: 0;
     /* Alignement à gauche */
-    top: 100%; /* Position sous l'élément parent */
-   
+    top: 100%;
+    /* Position sous l'élément parent */
+
 }
 
 /* Style pour le menu déroulant des articles */
@@ -83,13 +75,14 @@ header {
     display: none;
     /* Caché par défaut */
     position: absolute;
-    background-color: #ba81ef;
+    background-color: rgba(0,123,255,.25);
+    border-radius: 10px;
     /* Couleur de fond */
     min-width: 100px;
     /* Largeur du menu déroulant */
     z-index: 1;
     /* Place au-dessus des autres éléments */
-    
+
 }
 
 /* Style pour les éléments du menu déroulant */
@@ -112,25 +105,16 @@ header {
 /* Style pour les liens du menu déroulant au survol */
 .navbar .edit-articles a:hover {
     background-color: transparent;
-  }
+}
 
 /* Afficher le menu déroulant au survol du parent */
 .navbar li.nav-item:hover .edit-articles {
     display: block;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f3f3f3;
+.welcome{
     text-align: center;
-    margin: 0;
-    padding: 0;
-    /* height: 100vh; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
-
 .erreur {
     font-size: 4em;
     color: #333;
@@ -148,20 +132,18 @@ a {
     font-weight: bold;
 }
 
-#blog-logo {
-    width: 10%;
-    border-radius: 50%;
-    margin-left: 40px;
-}
 .icon-spacing {
-    margin-right: 5px; 
+    margin-right: 5px;
 }
-.map-link{
+
+.map-link {
     color: black;
 }
-.contact-mail a{
+
+.contact-mail a {
     color: blueviolet;
 }
+
 /* style page signin/login*/
 
 /* Style pour le formulaire d'inscription */
@@ -174,6 +156,7 @@ a {
     margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+
 /*style pour nouvel article form*/
 .form-article {
     width: 30%;
@@ -210,6 +193,7 @@ a {
 .form-article input[type="submit"]:hover {
     background-color: #45a049;
 }
+
 /* .change-article {
     width: 30%;
     margin: auto;
@@ -292,6 +276,7 @@ a {
     color: white;
     margin-bottom: 20px;
 }
+
 .arrow-right {
     width: 0;
     height: 0;
@@ -305,24 +290,28 @@ a {
 }
 
 .right-column {
-    width: 15%; /* Ajustez la largeur de la colonne de droite */
-  }
+    width: 15%;
+    /* Ajustez la largeur de la colonne de droite */
+}
 
 .social-icons-contact {
-    transform: rotate(270deg); /* Faites pivoter de 90 degrés */
+    transform: rotate(270deg);
+    /* Faites pivoter de 90 degrés */
     position: absolute;
     top: 50%;
     right: 0;
-    }
+}
 
 .social-icon-contact {
     color: black;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     margin-left: 25px;
 }
-.icon-large{
+
+.icon-large {
     font-size: 20px;
 }
+
 /*style pour messages erreur ou succes*/
 .flash-message {
     padding: 10px;
@@ -332,13 +321,15 @@ a {
 }
 
 .success {
-    background-color: #4CAF50; /* couleur de fond pour les messages de succès */
+    background-color: #4CAF50;
+    /* couleur de fond pour les messages de succès */
     color: white;
 
 }
 
 .error {
-    background-color: #e66a61; /* couleur de fond pour les messages d'erreur */
+    background-color: #e66a61;
+    /* couleur de fond pour les messages d'erreur */
     color: black;
 }
 
@@ -411,6 +402,7 @@ a {
 .forgot-password {
     margin-top: 10px;
 }
+
 /* style du form "new password */
 .form-container {
     max-width: 400px;
@@ -445,9 +437,12 @@ input {
 button:hover {
     background-color: rgb(166, 166, 242);
 }
+
 /* style pour articles et commentaires */
 
-
+.article-list{
+    list-style-type: none;  
+}
 .article-title {
     font-size: 36px;
     margin-top: 0;
@@ -484,7 +479,8 @@ button:hover {
     font-size: 24px;
     margin-top: 0;
 }
-.new-btn{
+
+.new-btn {
     background-color: #0056b3;
     width: 75px;
     height: 60px;
@@ -495,6 +491,7 @@ button:hover {
     align-items: center;
 
 }
+
 .comments-list {
     list-style-type: none;
     padding: 0;
@@ -588,7 +585,7 @@ input[type="submit"]:hover {
 
 /* Style de base pour le footer */
 footer {
-    background-color: black;
+    background-color: rgb(12, 7, 43);
     color: white;
     padding: 10px 0;
     /* Réduire la hauteur du padding */
