--- a/template/admin/comment/comments_rejected.html.twig
+++ b/template/admin/comment/comments_rejected.html.twig
@@ -27,6 +27,7 @@
 					<td>{{ comment.mail }}</td>
 					<td>{{ comment.status }}</td>
 					<td>
+                    
 						<form action="/admin/check-comment" method="POST">
                 <input type="hidden" name="commentId" value="{{ comment.id }}">
 
@@ -38,6 +39,9 @@
                 <button type="submit">Soumettre</button>
             </form>
 					</td>
+                    <td>
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#commentModal{{ comment.id }}">Détails du commentaire</button>
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
@@ -46,6 +50,8 @@
 
 {% block js %}
 	{{ parent() }}
-	<!-- Ajoutez les scripts JS spécifiques à cette page si nécessaire -->
-	<script src="../js/comments_rejected.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https:/cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+	<script src="../js/datatable_init.js"></script>
 {% endblock %}
+
