--- a/template/article/index.html.twig
+++ b/template/article/index.html.twig
@@ -7,7 +7,7 @@
 
     <ul>
         {% for article in articles %}
-            <li>
+            <li class="article-list">
                 <h2>{{ article.title }}</h2>
                 {% if article.updateDate %}
                     <p>Date de Modification : {{ article.updateDate|date('d/m/Y') }}</p>
