--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,7 +322,7 @@ a {
 }
 
 .success {
-    background-color: #7ebe80;
+    background-color: #d1a1d0;
     /* couleur de fond pour les messages de succès */
     color: white;
     width: 20%;
@@ -342,7 +342,7 @@ a {
 }
 
 .error {
-    background-color: #e66a61;
+    background-color: #c53830;
     /* couleur de fond pour les messages d'erreur */
     color: black;
 }
@@ -458,22 +458,10 @@ button:hover {
     list-style-type: none;
 }
 
-.article-title {
-    font-size: 36px;
-    margin-top: 0;
+.title-article{
+   display: flex; 
+   justify-content: center;
 }
-
-.article-time {
-    font-size: 16px;
-    color: black;
-}
-
-.article-content {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
 .section {
     margin-bottom: 20px;
 }
@@ -560,7 +548,7 @@ button:hover {
     background-color: #f5f5f5;
     padding: 20px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
